--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <footer>
         <ul class="footer-social">
             <li><a href="https://app.aluracursos.com/user/oliverdev"><img src="./assets/img/icono-alura.png" alt="Alura"></a></li>
-            <li><a href="https://github.com/Jetbear69?tab=repositories"><img src="./assets/img/icono-github.png" alt="GitHub"></a></li>
+            <li><a href="https://github.com/jriveraa-github"><img src="./assets/img/icono-github.png" alt="GitHub"></a></li>
             <li><a href="https://t.me/Oliver_dev"><img src="./assets/img/icono-telegram.png" alt="Telegram"></a></li>
             <li><a href="https://linkedin.com/in/oliverdev"><img src="./assets/img/icono-linkedin.png" alt="LinkedIn"></a></li>
             <li><a href="https://x.com/Jetbear69"><img src="./assets/img/icono-x.png" alt="X"></a></li>
