--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     <!-- Pie de página -->
     <footer>
         <ul class="footer-social">
-            <li><a href="https://app.aluracursos.com/user/oliverdev"><img src="./assets/img/icono-alura.png" alt="Alura"></a></li>
+            <li><a href="https://app.aluracursos.com/user/jriveraambrosio"><img src="./assets/img/icono-alura.png" alt="Alura"></a></li>
             <li><a href="https://github.com/jriveraa-github"><img src="./assets/img/icono-github.png" alt="GitHub"></a></li>
             <li><a href="https://t.me/Oliver_dev"><img src="./assets/img/icono-telegram.png" alt="Telegram"></a></li>
-            <li><a href="https://linkedin.com/in/oliverdev"><img src="./assets/img/icono-linkedin.png" alt="LinkedIn"></a></li>
-            <li><a href="https://x.com/Jetbear69"><img src="./assets/img/icono-x.png" alt="X"></a></li>
+            <li><a href="linkedin.com/in/josue-rivera-ambrosio-006b71308"><img src="./assets/img/icono-linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://x.com/jriveraambrosio"><img src="./assets/img/icono-x.png" alt="X"></a></li>
         </ul>
         Alura ONE Challenge&emsp;&copy; 2024 &emsp;
     </footer>
